crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_if.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if testing(,) then _
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Call {
                    func: Spanned(
                        Ident(
                            Spanned(
                                "testing",
                                3..10,
                            ),
                        ),
                        3..10,
                    ),
                    args: Spanned(
                        [
                            Spanned(
                                Error,
                                10..13,
                            ),
                        ],
                        10..13,
                    ),
                },
                3..13,
            ),
            then_branch: Spanned(
                Ident(
                    Spanned(
                        "_",
                        19..20,
                    ),
                ),
                19..20,
            ),
            else_branch: None,
        },
        0..20,
    ),
)

--- Errors ---
[
    ParseError {
        span: 11..12,
        reason: ExpectedFound {
            expected: [
                CloseParen,
                Expression,
            ],
            found: Some(
                Comma,
            ),
        },
    },
]
---
