crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__simple_expressions-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(grouped_ident)
---

Some(
    Spanned(
        Ident(
            Spanned(
                "grouped_ident",
                1..14,
            ),
        ),
        1..14,
    ),
)

--- Errors ---
[]
---
