crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__simple_expressions-3.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
func_name(2, "Do stuff!!", true)
---

Some(
    Spanned(
        Call {
            func: Spanned(
                Ident(
                    Spanned(
                        "func_name",
                        0..9,
                    ),
                ),
                0..9,
            ),
            args: Spanned(
                [
                    Spanned(
                        Literal(
                            Spanned(
                                Int(2),
                                10..11,
                            ),
                        ),
                        10..11,
                    ),
                    Spanned(
                        Literal(
                            Spanned(
                                String("Do stuff!!"),
                                13..25,
                            ),
                        ),
                        13..25,
                    ),
                    Spanned(
                        Ident(
                            Spanned(
                                "true",
                                27..31,
                            ),
                        ),
                        27..31,
                    ),
                ],
                9..32,
            ),
        },
        0..32,
    ),
)

--- Errors ---
[]
---
