crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__simple_expressions-4.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(make_func())()()()
---

Some(
    Spanned(
        Call {
            func: Spanned(
                Call {
                    func: Spanned(
                        Call {
                            func: Spanned(
                                Call {
                                    func: Spanned(
                                        Ident(
                                            Spanned(
                                                "make_func",
                                                1..10,
                                            ),
                                        ),
                                        1..10,
                                    ),
                                    args: Spanned(
                                        [],
                                        10..12,
                                    ),
                                },
                                1..12,
                            ),
                            args: Spanned(
                                [],
                                13..15,
                            ),
                        },
                        1..15,
                    ),
                    args: Spanned(
                        [],
                        15..17,
                    ),
                },
                1..17,
            ),
            args: Spanned(
                [],
                17..19,
            ),
        },
        1..19,
    ),
)

--- Errors ---
[]
---
