crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__simple_expressions-5.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(((wrapped)))()
---

Some(
    Spanned(
        Call {
            func: Spanned(
                Ident(
                    Spanned(
                        "wrapped",
                        3..10,
                    ),
                ),
                3..10,
            ),
            args: Spanned(
                [],
                13..15,
            ),
        },
        3..15,
    ),
)

--- Errors ---
[]
---
