crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__simple_expressions-6.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(if true then 1 else 2) + 3
---

Some(
    Spanned(
        Binary(
            Spanned(
                If {
                    condition: Spanned(
                        Ident(
                            Spanned(
                                "true",
                                4..8,
                            ),
                        ),
                        4..8,
                    ),
                    then_branch: Spanned(
                        Literal(
                            Spanned(
                                Int(1),
                                14..15,
                            ),
                        ),
                        14..15,
                    ),
                    else_branch: Some(
                        Spanned(
                            Literal(
                                Spanned(
                                    Int(2),
                                    21..22,
                                ),
                            ),
                            21..22,
                        ),
                    ),
                },
                1..22,
            ),
            Add,
            Spanned(
                Literal(
                    Spanned(
                        Int(3),
                        26..27,
                    ),
                ),
                26..27,
            ),
        ),
        1..27,
    ),
)

--- Errors ---
[]
---
