crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__simple_expressions.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
indentifier_1
---

Some(
    Spanned(
        Ident(
            Spanned(
                "indentifier_1",
                0..13,
            ),
        ),
        0..13,
    ),
)

--- Errors ---
[]
---
