crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
-1.0
---

Some(
    Spanned(
        Unary(
            Neg,
            Spanned(
                Literal(
                    Spanned(
                        Float(1, 0),
                        1..4,
                    ),
                ),
                1..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
