crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
-0.
---

Some(
    Spanned(
        Unary(
            Neg,
            Spanned(
                Float(0, 0),
                1..3,
            ),
        ),
        0..3,
    ),
)

--- Errors ---
[]
---
