crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-4.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
---3
---

Some(
    Spanned(
        Unary(
            Neg,
            Spanned(
                Unary(
                    Neg,
                    Spanned(
                        Unary(
                            Neg,
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(3),
                                        3..4,
                                    ),
                                ),
                                3..4,
                            ),
                        ),
                        2..4,
                    ),
                ),
                1..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
