crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__unary_expressions-5.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!true
---

Some(
    Spanned(
        Unary(
            Not,
            Spanned(
                Ident(
                    Spanned(
                        "true",
                        1..5,
                    ),
                ),
                1..5,
            ),
        ),
        0..5,
    ),
)

--- Errors ---
[]
---
